--- a/environment.yml
+++ b/environment.yml
@@ -4,10 +4,14 @@ channels:
   - defaults
 dependencies:
   - python>=3.6
+ #  - pip>=20
   - numpy
   - matplotlib
   - jupyterlab
   - astropy
   - kapteyn
+  - pip:
+    - tol-colors
+    - importlib_resources
 
 
