--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,12 @@ __pycache__/
 # C extensions
 *.so
 
+#text files (manual add imporant)
+*csv
+*txt
+*dat
+*cds
+
 # Distribution / packaging
 .Python
 build/
